--- a/src/main.scss
+++ b/src/main.scss
@@ -3,19 +3,6 @@
 @import 'layouts/**/*';
 @import 'components/**/*';
 
-html {
-  height: 100%;
-  min-height: 100%;
-}
-
-body {
-  background-color: $color-bg-dark;
-  height: auto;
-  min-height: 100%;
-  overflow-y: -moz-scrollbars-vertical;
-  overflow-y: scroll;
-}
-
 a,
 a:visited,
 md-menu-item a.md-button,
